syntax = "proto2";

option java_multiple_files = true;
option java_package = "com.zyc.proto";
option java_outer_classname = "HelloGrpcProto";

package hello;

service HelloGrpc {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    optional string name = 1;
}

message HelloReply {
    optional string message = 1;
}
